--- a/css/style.css
+++ b/css/style.css
@@ -225,51 +225,62 @@ h1{
 
     @media screen and (max-width: 480px) 
     {
-        .nav{
-            height: ; 
-        }
-        .p1, .p3 {
-            background-color: red;
-        }
-
-       nav li{
-        font-size: 15px;
-        margin: 0 10px;
-       }
-
-       .p2 li{
-        height: 150px;
-        width: 150px;
-        font-size: 15px;
-        display: block;
-        line-height: 150px;
-        box-shadow: inset 0 0 0 4px white;
-        
-       }
-
-       .p2 ul{
-        width: 380px;
-        margin: 0 auto;
-        padding: 25px;
+      .nav{
+        height: ; 
     }
-      
-    .p3 li{
-      height: 150px;
-      width: 150px;
-      display: block;
-      box-shadow: inset 0 0 0 3px white;
-      
-     }
+    .p1, .p3 {
+        background-color: red;
+    }
+
+   nav li{
+    font-size: 15px;
+    margin: 0 10px;
+   }
+
+   .p2 li{
+    height: 150px;
+    width: 150px;
+    font-size: 15px;
+    display: block;
+    line-height: 150px;
+    box-shadow: inset 0 0 0 4px white;
     
-    .p3 ul{
-      width: 380px;
-      padding: 15px;
-      margin: 10px;
-    }
+   }
 
+   .p2 ul{
+    width: 380px;
+    margin: 0 auto;
+    padding: 25px;
+}
 
-      
-    }
+h1{
+  font-size: 70px;
+}
+
+.p3 .filete{
+  height: 5px;
+  width: 150px;
+  background: black;
+  margin: 0 auto;
+  margin-top: 10px;
+}
+  
+.p3 li{
+  height: 150px;
+  width: 150px;
+  box-shadow: inset 0 0 0 3px white;
+  margin: 15px;
+
+ }
+
+.p3 ul{
+  width: 130px;
+  padding: 5px;
+  margin: 10px 85px;
+
+}
+  
+}
 
 
 
