--- a/css/style.css
+++ b/css/style.css
@@ -43,8 +43,8 @@ svg {
   font-size: 170px;
 }
 svg text {
-  fill: #111;
-  stroke: #111;
+  fill: #ffffff;
+  stroke: #ffffff;
   fill-opacity: 1;
   stroke-width: 0;
   stroke-dasharray: 100% 0;
@@ -79,8 +79,12 @@ body{
 .p1{
   background: #DDD0C8;
 }
+
 .p2{
   background:#323232;
+  background-image: url(../img/Los-15-trabajos-mas-demandados-en-Espana2.jpg) ;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 .p3{
   background: #DDD0C8;
@@ -98,7 +102,7 @@ nav li {
 .p2 li{
   height: 250px;
   width: 250px;
-  background: #DDD0C8;
+  background: rgb(47, 102, 230);
   float: left;
   margin: 5px;
   text-align: center;
@@ -106,7 +110,7 @@ nav li {
   line-height: 250px;
   color: white;
   font-size: 30px;
-  box-shadow: inset 0 0 0 5px white;
+  box-shadow: inset 0 0 0 ;
   transform: scale(100%);
   transition: 1s;
 }
@@ -125,7 +129,7 @@ a:visited{
 .p3 .filete{
   height: 10px;
   width: 150px;
-  background: black;
+  background: rgb(255, 255, 255);
   margin: 0 auto;
   margin-top: 20px;
 }
@@ -150,6 +154,8 @@ h1{
   font-size: 100px;
   text-align: center;
   padding-top: 200px;
+  color: white;
+  
 }
 .p3 ul{
   width: 660px;
@@ -161,18 +167,21 @@ h1{
   background-repeat: no-repeat;
   background-size: 70%;
   background-position: center;
+  border-radius: 20%;
 }
 .wasap{
   background-image: url(../img/wasap.png);
   background-repeat: no-repeat;
   background-size: 70%;
   background-position: center;
+  border-radius: 20%;
 }
 .correo{
   background-image: url(../img/gmail.png);
   background-repeat: no-repeat;
   background-position: center;
   background-size: 70%;
+  border-radius: 20%;
 }
 .p3 li:hover{
   opacity: 50%;
@@ -183,7 +192,7 @@ h1{
       height: 50px;
  }
   .p1, .p3 {
-      background-color: #DDD0C8;
+      background-color: #1150e4;
  }
   .p2 li{
       display: inline;
@@ -230,6 +239,7 @@ h1{
       width: 130px;
       box-shadow: inset 0 0 0 3px white;
       margin: 15px;
+      
  }
   .p3 ul{
       width: 130px;
@@ -237,3 +247,5 @@ h1{
       margin: 0.625rem 6.313rem;
  }
 }
+
+
